@@ -55,6 +55,9 @@ extern "C" {
 #include "cli/cmd_test.hpp"
 #include "cli/common.ipp"
 #include "cli/config.hpp"
+#include "engine/atf.hpp"
+#include "engine/plain.hpp"
+#include "engine/tap.hpp"
 #include "store/exceptions.hpp"
 #include "utils/cmdline/commands_map.ipp"
 #include "utils/cmdline/exceptions.hpp"
@@ -84,6 +87,26 @@ using utils::optional;
 
 
 namespace {
+
+
+/// Registers all valid executor interfaces.
+///
+/// This is part of Kyua's setup but it is a bit strange to find it here.  I am
+/// not sure what a better location would be though, so for now this is good
+/// enough.
+static void
+register_executor_interfaces(void)
+{
+    engine::executor::register_interface(
+        "atf", std::shared_ptr< engine::executor::interface >(
+            new engine::atf_interface()));
+    engine::executor::register_interface(
+        "plain", std::shared_ptr< engine::executor::interface >(
+            new engine::plain_interface()));
+    engine::executor::register_interface(
+        "tap", std::shared_ptr< engine::executor::interface >(
+            new engine::tap_interface()));
+}
 
 
 /// Executes the given subcommand with proper usage_error reporting.
@@ -199,6 +222,7 @@ safe_main(cmdline::ui* ui, int argc, const char* const argv[],
     cli::cli_command* command = commands.find(cmdname);
     if (command == NULL)
         throw cmdline::usage_error(F("Unknown command '%s'") % cmdname);
+    register_executor_interfaces();
     return run_subcommand(ui, command, cmdline.arguments(), user_config);
 }
 
